--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://iskunalnayyar.github.io/Portfolio",
+  "homepage": "http://iskunalnayyar.github.io",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
