--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "homepage": "http://iskunalnayyar.github.io",
   "name": "my-app",
   "version": "0.1.0",
+  "homepage": "https://iskunalnayyar.github.io/iskunalnayyar.github.io",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.5",
@@ -9,7 +9,8 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "express": "^4.17.1",
-    "npm": "^6.14.3",
+    "now": "^17.1.1",
+    "npm": "^6.14.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-mdl": "^2.1.0",
@@ -17,12 +18,12 @@
     "react-scripts": "^3.4.0"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
+    "predeploy": "npm run build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
