--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my-app",
+  "name": "me",
   "version": "0.1.0",
-  "homepage": "https://iskunalnayyar.github.io/iskunalnayyar.github.io",
+  "homepage": "https://iskunalnayyar.github.io/me",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.5",
